--- a/Galerie.css
+++ b/Galerie.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: url("images/CasutaBunicii1-59.png");
+  background-image: url("CasutaBunicii1-59.png");
 }
 
 .u-section-1 .u-sheet-1 {
